# spud-imprint

./: .gitignore  AGENTS.md  README.en.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  development.md  usage.md
examples/: config.example.toml
legacy/: BatchTool_PhotoPocess_v0.1.py  BatchTool_PhotoPocess_v0.2.py  BatchTool_PhotoPocess_v0.3.py
legacy/BatchTool_PhotoPocess_v0.4/: image_export.py  main.py  metadata_utils.py  text_placement.py  text_style.py  virtual_canvas.py
src/laxpud_imprint/: cli.py  config.py  metadata.py  pipeline.py  text.py
src/spud_imprint/: __init__.py  canvas.py  cli.py  export.py
tests/: test_config.py  test_metadata.py  test_pipeline.py  test_text.py
